# m-cubed

./: .gitignore  README.md  pyproject.toml
data/example/: example_bracket_64.csv  seed_expected_wins.csv  seed_matchup_probs.csv
notebooks/: bracket_simulation.ipynb  lineup_optimization.ipynb  seed_value_baseline.ipynb  sensitivity_analysis.ipynb
src/march_madness_model/: __init__.py  bracket.py  cli.py  data_models.py  metrics.py  optimizer.py  plotting.py  pricing.py  probabilities.py  simulator.py
tests/: test_bracket.py  test_optimizer.py  test_pricing.py  test_probabilities.py  test_simulator.py
