[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "march-madness-model"
version = "0.1.0"
description = "Research-friendly March Madness fantasy draft modeling toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI Codex"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pulp>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[project.scripts]
mm-model = "march_madness_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
